some refactoring and base of project

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>title</title>
-    <link rel="stylesheet" href="base.css">
-  </head>
-  <body>
-  TESTE
-  </body>
-  <script src="https://d3js.org/d3.v6.min.js"></script>
-  <script src="beautyData.js"></script>
+
+<head>
+  <meta charset="utf-8">
+  <title>Beautiful Data</title>
+  <link rel="stylesheet" href="base.css">
+</head>
+
+<body>
+  <h1 class="main-color div" style="width:100%;text-align: center;">Beautiful-Data, a chart library based on D3.js</h1>
+  <div class="div">
+    <div id="barchart" class="chart"></div>
+    <div class="info">
+      <h1>Gráficos de Barras</h1>
+    </div>
+  </div>
+  <div id="linechart" class="div"></div>
+  <div id="scatterplot" class="div"></div>
+</body>
+<footer>
+  <div class="Footer">
+    <div>Desenvolvido por <a href="https://github.com/moutella" class="name">João Gabriel Moutella</a></div>
+    <div>Trabalho do curso Visualização de Dados</div>
+    <div>Ministrado por <a href="https://github.com/mlage" class="name">Marcos Lage</a></div>
+  </div>
+</footer>
+<script src="https://d3js.org/d3.v6.min.js"></script>
+<script src="utils.js"></script>
+<script src="beautifulData.js"></script>
+<script src="exampleCharts.js"></script>
 
 </html>
