--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Beautiful Data</title>
+  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-4ZPLezkTZTsojWFhpdFembdzFudphhoOzIunR1wH6g1WQDzCAiPvDyitaK67mp0+" crossorigin="anonymous">
   <link rel="stylesheet" href="base.css">
 </head>
 
@@ -12,6 +13,8 @@
     <div id="barchart" class="chart"></div>
     <div class="info">
       <h1>Gráficos de Barras</h1>
+      <button id="new_data" type="button"> Mudar dados</button>
+      <button id="new_params" type="button"> Mudar parametros</button>
     </div>
   </div>
   <div id="linechart" class="div"></div>
@@ -24,9 +27,10 @@
     <div>Ministrado por <a href="https://github.com/mlage" class="name">Marcos Lage</a></div>
   </div>
 </footer>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://d3js.org/d3.v6.min.js"></script>
 <script src="utils.js"></script>
-<script src="beautifulData.js"></script>
-<script src="exampleCharts.js"></script>
+<script type="module" src="beautifulData.js"></script>
+<script type="module" src="exampleCharts.js"></script>
 
 </html>
