--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Beautiful Data</title>
-  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-4ZPLezkTZTsojWFhpdFembdzFudphhoOzIunR1wH6g1WQDzCAiPvDyitaK67mp0+" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css">
   <link rel="stylesheet" href="base.css">
 </head>
 
@@ -13,6 +13,7 @@
     <div id="barchart" class="chart"></div>
     <div class="info">
       <h1>Gráficos de Barras</h1>
+      <input data-role="slider" class="ultra-thin cycle-marker">
       <button id="new_data" type="button"> Mudar dados</button>
       <button id="new_params" type="button"> Mudar parametros</button>
     </div>
@@ -28,6 +29,7 @@
   </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
 <script src="https://d3js.org/d3.v6.min.js"></script>
 <script src="utils.js"></script>
 <script type="module" src="beautifulData.js"></script>
