--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Beautiful Data</title>
-  <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css">
   <link rel="stylesheet" href="base.css">
 </head>
 
 <body>
-  <h1 class="main-color div" style="width:100%;text-align: center;">Beautiful-Data, a chart library based on D3.js</h1>
+  <h1 class="main-color div" style="width:100%;text-align: center;display:block;">Beautiful-Data, a chart library based on D3.js</h1>
   <div class="div">
     <div id="barchart" class="chart"></div>
     <div class="info">
